# cb-eventing

./: CMakeLists.txt  Makefile  README.md  Readme.md  compile.sh  event.css  event.html  event.js
bench/: handle_bench_test.go
go_eventing/: app_setup.go  builtin.js  communication_protocol.go  dcp_client.go  deployment.json  eventing.go  handle_event.js  http_handlers.go  http_server.go  local_tcp_server.go  mail_handler.go  proccess_timer_callbacks.go  regex_http_handler.go  v8_worker.go
go_eventing/apps/: credit_score  test_app  travel_itinerary  travel_sample
node_eventing/: README.md  app.js  bucket.js  events.js  reader.js  rr.sh  time_series.py
tcp/: local_tcp_client.c  main.go
test_scripts/: create_credit_score_blobs.py  create_payment_blobs.py  create_travel_itinerary.py  mock_v8_requests.py  populate_bucket.py
tests/: create_credit_score_blobs.py  create_travel_itinerary.py  handle_test.go  mock_v8_requests.py
tests/apps/: app3
ui/: event.css  event.html  event.js
ui/templates/: applications-frag.html  applist-frag.html  createApp-frag.html  editor-frag.html  header-frag.html  perApp-frag.html
v8worker/: binding.cc  binding.h  build.sh  worker.go
v8worker/binding/: binding.cc  cluster.h  deployment.json  n1ql.h  queue.h
v8worker/examples/handle-json/: handle-json.go  handle-json.js
worker/: worker.go
worker/binding/: Makefile  binding.h  bucket.cc  bucket.h  builtin.js  cluster.h  event_assert.h  http_response.cc  http_response.h  n1ql.cc  n1ql.h  parse_deployment.cc  parse_deployment.h  queue.cc  queue.h  worker.cc  worker.h
